fix layout on tablet size

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ h3 {
 		object-fit: cover;
 		object-position: 0 -4px;
 		border-radius: 50%;
-		margin: 60px auto 0px;
+		margin: 60px auto 10px;
 
 		height: 100px;
 		width: 100px;
@@ -133,6 +133,8 @@ h3 {
 			font-family: 'Caveat', cursive;
 			font-size: 32px;
 			font-weight: 900;
+			line-height: 32px;
+			margin: 10px 0;
 
 			& + p {
 				font-size: 16px;
@@ -166,19 +168,20 @@ main {
 	padding: 24px;
 
 	@media only screen and (min-width: 400px) {
-		padding: 0 40px 40px 40px;
+		padding: 40px;
 	}
 
 	@media only screen and (min-width: 760px) {
-		padding: 0 80px 80px 80px;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: repeat(max-content, 3);
 	}
 
 	@media only screen and (min-width: 1024px) {
-		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-template-rows: repeat(max-content, 3);
-		gap: 10px;
-		padding: 0;
+		gap: 24px;
+		padding: 24px;
 	}
 
 	.main-section__item {
@@ -200,6 +203,7 @@ main {
 			border-radius: 0;
 			box-shadow: none;
 			background-color: unset;
+			padding: 10px;
 		}
 
 		h3 {
@@ -248,28 +252,6 @@ main {
 		}
 	}
 
-	#projects {
-		grid-row: 1 / span 2;
-		grid-column: 2 / span 2;
-		height: max-content;
-
-		ul {
-			width: 100%;
-			max-height: 300px;
-			overflow-y: scroll;
-			padding-right: 20px;
-			display: block;
-
-			li {
-				a {
-					&::after {
-						content: ' 🔗';
-					}
-				}
-			}
-		}
-	}
-
 	#work-experience {
 		grid-row: 2;
 		grid-column: 1;
@@ -295,15 +277,22 @@ main {
 	#certificate {
 		grid-row: 2 / span 2;
 		grid-column: 2 / span 2;
-
 		height: max-content;
+	}
 
+	#projects {
+		grid-row: 1 / span 2;
+		grid-column: 2 / span 2;
+		height: max-content;
+	}
+
+	#certificate,
+	#projects {
 		ul {
 			width: 100%;
 			max-height: 300px;
 			overflow-y: scroll;
 			padding-right: 20px;
-			display: block;
 
 			li {
 				a {
@@ -328,7 +317,7 @@ main {
 	justify-content: center;
 	align-items: center;
 
-	padding-top: 25px;
+	padding-top: 45px;
 	padding-bottom: 45px;
 
 	font-size: 16px;
@@ -349,13 +338,17 @@ main {
 		font-size: 12px;
 		font-weight: 200;
 		font-style: italic;
+
+		@media only screen and (min-width: 400px) {
+			font-size: 16px;
+		}
 	}
 
 	#social-icons {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
-		gap: 10px;
+		gap: 24px;
 		margin-top: 20px;
 
 		a {
